Template testing complete

--- a/src/template.html
+++ b/src/template.html
@@ -12,13 +12,13 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
-    <title>Template</title>
+    <title>TESTING</title>
   </head>
   
   <body class="container">
 
     <h1 class="text-center mt-5 text-light">
-      SITE TEMPLATE
+      TEMPLATE
     </h1>
     <div class="text-center">
       <img class="w-75" src="./assets/webpack.svg" />
