Included font-awesome

--- a/src/template.html
+++ b/src/template.html
@@ -12,13 +12,14 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
+    <script src="https://kit.fontawesome.com/d56ea4dc28.js" crossorigin="anonymous"></script>
     <title>TESTING</title>
   </head>
   
   <body class="container">
 
     <h1 class="text-center mt-5 text-light">
-      TEMPLATE
+      TEMPLATE <i class="fas fa-atom"></i>
     </h1>
     <div class="text-center">
       <img class="w-75" src="./assets/webpack.svg" />
